--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     
         <div class="topmenu">
             <ul>
+                <li><a href="logout.html" onmouseover="OnMouseInTopMenu(this)" onmouseout="OnMouseOutTopMenu(this)">나의 독서 프로필</a></li>
                 <li ><a href="myPage.html" onmouseover="OnMouseInTopMenu(this)" onmouseout="OnMouseOutTopMenu(this)">마이페이지</a></li>
                 <li><a href="logout.html" onmouseover="OnMouseInTopMenu(this)" onmouseout="OnMouseOutTopMenu(this)">로그아웃</a></li>
             </ul>
